package cascao.observer;

public interface ContratacaoObserver {
    void atualizar(Contratacao contratacao);
}
